# Cmake_Practical

./: Final.cpp
Cmake/: CMakeLists.txt  main.cpp
Cmake/Try/: CMakeLists.txt  Try.cpp  Try.h
